CR-2003-01-14-0  Bugfix:    Fixed broken bild for glinux/alinux from 
                            CR-2003-01-13-0

CR-2003-01-13-1  Testsuite: qrsh test: set executable file permission for
                            generated shell script and wait for nfs to share
                            file.

CR-2003-01-13-0  Enhancem.  new qevent client. This event client is written
                            for the testsuite to get job start and job end
                            events.

CR-2003-01-08-0  Testsuite: Using "ts_def_con" user for deleting spool 
                 Bugfix:    spool directory with start_remote_tcl_prog() in 
                            install_core_system test.
                            Install as no root user blocked deleting spool
                            directory.

JG-2003-01-08-1  Testsuite  Testsuite only accepted branches as cvs revision,
                            but rejected tags.

JG-2003-01-08-0  Bugfix     qtcsh did not build in a shared linked system 
                            (aimk -shared-libs)

JG-2003-01-07-0  CVS:       Created VMAIN_STABLE_1_TAG

JG-2003-01-02-0  Enhancem.  Prevent lex scanner to be generated after each 
                            checkout. Instead, the checked in scanner is used.

SD-2002-12-19-2  Enhancem.  A new qmaster_params attribute called
                            SCHEDULER_TIMEOUT will allow the scheduler GDI event
                            acknowledge timeout (default is 10 minutes) to be
                            configured to a specific value. I have also added
                            GEEE profiling information which reports the number
                            of seconds required for specific parts of GEEE
                            scheduling (pending job ticket calculation, job
                            sorting, active job ticket calculation, and job
                            placement). These changes will provide additional